chore: Install necessary packages for custom chatbot notebook

--- a/examples/notebooks/basic_custom_chatbot.ipynb
+++ b/examples/notebooks/basic_custom_chatbot.ipynb
@@ -15,6 +15,16 @@
     "metadata": {},
     "outputs": [],
     "source": [
+     "# Install necessary packages\n",
+     "!pip install atomic-agents openai instructor"
+    ]
+   },
+   {
+    "cell_type": "code",
+    "execution_count": 2,
+    "metadata": {},
+    "outputs": [],
+    "source": [
      "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
      "from atomic_agents.agents.base_chat_agent import BaseChatAgent\n",
      "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
@@ -33,7 +43,7 @@
    },
    {
     "cell_type": "code",
-    "execution_count": 2,
+    "execution_count": 3,
     "metadata": {},
     "outputs": [],
     "source": [
@@ -65,7 +75,7 @@
    },
    {
     "cell_type": "code",
-    "execution_count": 3,
+    "execution_count": 4,
     "metadata": {},
     "outputs": [],
     "source": [
@@ -87,7 +97,7 @@
    },
    {
     "cell_type": "code",
-    "execution_count": 4,
+    "execution_count": 5,
     "metadata": {},
     "outputs": [],
     "source": [
@@ -110,7 +120,7 @@
    },
    {
     "cell_type": "code",
-    "execution_count": 5,
+    "execution_count": 6,
     "metadata": {},
     "outputs": [],
     "source": [
