feat: Add project information to custom chatbot notebook

--- a/examples/notebooks/basic_custom_chatbot.ipynb
+++ b/examples/notebooks/basic_custom_chatbot.ipynb
@@ -6,7 +6,13 @@
     "source": [
      "# Custom Chatbot with Atomic Agents\n",
      "\n",
-     "This example demonstrates how to create a custom chatbot with a custom personality using the Atomic Agents library."
+     "This example demonstrates how to create a custom chatbot with a custom personality using the Atomic Agents library.\n",
+     "\n",
+     "## Project Information\n",
+     "\n",
+     "This project showcases how to build a chatbot with a unique personality using the Atomic Agents library. The chatbot is designed to be helpful and friendly, responding to user inputs in rhyming verse, preferably in alexandrine verse.\n",
+     "\n",
+     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KennyVaneetvelde/atomic_agents/blob/main/examples/notebooks/basic_custom_chatbot.ipynb#)\n"
     ]
    },
    {
@@ -151,9 +157,9 @@
     "file_extension": ".py",
     "mimetype": "text/x-python",
     "name": "python",
-    "nbconvert_exporter": "python",
-    "pygments_lexer": "ipython3",
-    "version": "3.12.3"
+     "nbconvert_exporter": "python",
+     "pygments_lexer": "ipython3",
+     "version": "3.12.3"
    }
   },
   "nbformat": 4,
