--- a/examples/notebooks/basic_custom_chatbot.ipynb
+++ b/examples/notebooks/basic_custom_chatbot.ipynb
@@ -108,7 +108,7 @@
     "outputs": [],
     "source": [
      "agent = BaseChatAgent(\n",
-     "    client=instructor.from_openai(openai.OpenAI()), \n",
+     "    client=instructor.from_openai(openai.OpenAI(api_key='YOUR OPENAI API KEY')), \n",
      "    system_prompt_generator=system_prompt_generator,\n",
      "    model='gpt-3.5-turbo',\n",
      "    memory=memory,\n",
