--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -15,6 +15,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Prerequisites\n",
+    "\n",
+    "Before proceeding with this notebook, it is highly recommended to read up on the basics of the following libraries:\n",
+    "\n",
+    "- **Pydantic**: A data validation and settings management library using Python type annotations. You can find more information and documentation at [Pydantic GitHub](https://github.com/pydantic/pydantic).\n",
+    "- **Instructor**: A Python library that simplifies working with structured outputs from large language models (LLMs). It provides a user-friendly API to manage validation, retries, and streaming responses. More details can be found at [Instructor GitHub](https://github.com/jxnl/instructor).\n",
+    "\n",
+    "Understanding these libraries will help you make the most of this library.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1: Install Necessary Packages\n",
     "\n",
     "First, we need to install the required packages. Run the following command to install `atomic-agents`, `openai`, and `instructor` libraries."
@@ -63,7 +77,9 @@
     "## Step 3: Define System Prompt Information\n",
     "\n",
     "We will define the system prompt information including background, steps, and output instructions. This helps the chatbot understand how to respond to user inputs.\n",
-    "In this example, we will define a system prompt that asks the chatbot to respond to user inputs in rhyming verse."
+    "In this example, we will define a system prompt that asks the chatbot to respond to user inputs in rhyming verse.\n",
+    "\n",
+    "The structuring of the system prompts in this library is loosely inspired by Patterns in the [Fabric library](https://github.com/danielmiessler/fabric/tree/main/patterns)."
    ]
   },
   {
@@ -156,7 +172,8 @@
    "source": [
     "## Step 6: Main Chat Loop\n",
     "\n",
-    "We will create a main chat loop for testing the chat agent. This loop will allow you to interact with the chatbot in real-time."
+    "We will create a main chat loop for testing the chat agent. This loop will allow you to interact with the chatbot in real-time.\n",
+    "To exit the loop, type `/exit` or `/quit`."
    ]
   },
   {
