feat: Update orchestrator notebook and remove  import

--- a/examples/notebooks/orchestrator/orchestrator.ipynb
+++ b/examples/notebooks/orchestrator/orchestrator.ipynb
@@ -1,22 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello from some_function!\n"
-     ]
-    }
-   ],
    "source": [
-    "from to_import import some_function\n",
-    "\n",
-    "print(some_function())"
+    "# Orchestrator Agent"
    ]
   }
  ],
