Fix broken Colab link in quickstart notebook Add orchestrator tutorial

--- a/examples/notebooks/orchestrator.ipynb
+++ b/examples/notebooks/orchestrator.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quickstart Tutorial: Basic Custom Chatbot using Atomic Agents\n",
+    "# Orchestrator Agent Tutorial\n",
     "\n",
-    "This quickstart tutorial demonstrates how to create a custom chatbot with a unique personality using the Atomic Agents library. The chatbot will respond to user inputs in rhyming verse.\n",
+    "This tutorial demonstrates how to create an orchestrator agent using the Atomic Agents library. The orchestrator agent will manage tasks and respond to user inputs in rhyming verse.\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KennyVaneetvelde/atomic_agents/blob/main/examples/notebooks/quickstart.ipynb#)\n"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/KennyVaneetvelde/atomic_agents/blob/main/examples/notebooks/orchestrator.ipynb#)\n"
    ]
   },
   {
@@ -50,10 +50,11 @@
    "source": [
     "## Step 2: Import Libraries\n",
     "\n",
-    "We will import the necessary libraries for creating the chatbot. Each library serves a specific purpose:\n",
+    "We will import the necessary libraries for creating the orchestrator agent. Each library serves a specific purpose:\n",
     "- `ChatMemory`: Manages the chat history.\n",
     "- `BaseChatAgent`: The base class to create a custom chatbot. Can be extended for additional functionality if needed.\n",
-    "- `SystemPromptGenerator` and `SystemPromptInfo`: To define and generate system prompts."
+    "- `SystemPromptGenerator` and `SystemPromptInfo`: To define and generate system prompts.\n",
+    "- `BaseTool`, `CalculatorTool`, `SearxNGSearchTool`: Tools that the orchestrator agent can use to perform tasks."
    ]
   },
   {
@@ -63,11 +64,17 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from typing import List, Type, Union\n",
+    "from pydantic import BaseModel, Field\n",
+    "from rich.console import Console\n",
+    "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
+    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentResponse\n",
+    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptContextProviderBase, SystemPromptGenerator, SystemPromptInfo\n",
     "import instructor\n",
     "import openai\n",
-    "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent\n",
-    "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo"
+    "from atomic_agents.lib.tools.base import BaseTool\n",
+    "from atomic_agents.lib.tools.calculator_tool import CalculatorTool, CalculatorToolSchema\n",
+    "from atomic_agents.lib.tools.search.searx_tool import SearxNGSearchTool, SearxNGSearchToolConfig, SearxNGSearchToolSchema"
    ]
   },
   {
@@ -76,10 +83,8 @@
    "source": [
     "## Step 3: Define System Prompt Information\n",
     "\n",
-    "We will define the system prompt information including background, steps, and output instructions. This helps the chatbot understand how to respond to user inputs.\n",
-    "In this example, we will define a system prompt that asks the chatbot to respond to user inputs in rhyming verse.\n",
-    "\n",
-    "The structuring of the system prompts in this library is loosely inspired by Patterns in the [Fabric library](https://github.com/danielmiessler/fabric/tree/main/patterns)."
+    "We will define the system prompt information including background, steps, and output instructions. This helps the orchestrator agent understand how to respond to user inputs and manage tasks.\n",
+    "In this example, we will define a system prompt that asks the orchestrator agent to respond to user inputs in rhyming verse and manage tasks efficiently."
    ]
   },
   {
@@ -88,24 +93,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "search_tool = SearxNGSearchTool(SearxNGSearchToolConfig(base_url=os.getenv('SEARXNG_BASE_URL'), max_results=10))\n",
+    "calculator_tool = CalculatorTool()\n",
+    "\n",
+    "class ToolInfoProvider(SystemPromptContextProviderBase):        \n",
+    "    def get_info(self) -> str:\n",
+    "        response = 'The available tools are:\\n'\n",
+    "        for tool in [search_tool, calculator_tool]:\n",
+    "            response += f'- {tool.tool_name}: {tool.tool_description}\\n'\n",
+    "        return response\n",
+    "\n",
+    "# Define system prompt information including background, steps, and output instructions\n",
     "system_prompt = SystemPromptInfo(\n",
     "    background=[\n",
-    "        'This assistant is a general-purpose AI designed to be helpful and friendly.',\n",
+    "        'This assistant is an orchestrator of tasks designed to be helpful and efficient.',\n",
     "    ],\n",
     "    steps=[\n",
-    "        'Understand the user\\'s input and provide a relevant response.',\n",
-    "        'Respond to the user.'\n",
+    "        'Understand the user\\'s input and the current context.',\n",
+    "        'Look at the tools available and determine which to use next based on the current context, user input, and history.',\n",
+    "        'Execute the chosen tool and provide a relevant response to the user.'\n",
     "    ],\n",
     "    output_instructions=[\n",
     "        'Provide helpful and relevant information to assist the user.',\n",
-    "        'Be friendly and respectful in all interactions.',\n",
+    "        'Be efficient and effective in task orchestration.',\n",
     "        'Always answer in rhyming verse.'\n",
-    "    ]\n",
+    "    ],\n",
+    "    context_providers={\n",
+    "        'tools': ToolInfoProvider(title='Available tools')\n",
+    "    }\n",
     ")\n",
+    "\n",
+    "# Initialize the system prompt generator with the defined system prompt and dynamic info providers\n",
     "system_prompt_generator = SystemPromptGenerator(system_prompt)\n",
     "\n",
+    "# Test out the system prompt generator\n",
     "from rich.markdown import Markdown\n",
-    "Markdown(system_prompt_generator.generate_prompt())"
+    "from rich.console import Console\n",
+    "Console().print('='*50)\n",
+    "Console().print(Markdown(system_prompt_generator.generate_prompt()))\n",
+    "Console().print('='*50)"
    ]
   },
   {
@@ -134,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Set Up API Key and Create Chat Agent\n",
+    "## Step 5: Set Up API Key and Create Orchestrator Agent\n",
     "\n",
     "To use the **OpenAI** API, you need to set up your API key. You can either enter it directly in the code or set it as an environment variable. Additionally, you can choose other clients such as **Anthropic**, **Mistral**, etc. For a full list, check out the [Instructor library docs](https://github.com/jxnl/instructor)."
    ]
@@ -158,12 +184,30 @@
     "\n",
     "client = instructor.from_openai(openai.OpenAI(api_key=API_KEY))\n",
     "\n",
+    "class ResponseSchema(BaseModel):\n",
+    "    chosen_schema: Union[BaseChatAgentResponse, SearxNGSearchToolSchema, CalculatorToolSchema] = Field(..., description='The response from the chat agent.')\n",
+    "    \n",
+    "    class Config:\n",
+    "        title = 'ResponseSchema'\n",
+    "        description = 'The response schema for the chat agent.'\n",
+    "        json_schema_extra = {\n",
+    "            'title': title,\n",
+    "            'description': description,\n",
+    "        }\n",
+    "\n",
+    "# Create a chat agent with the specified model, system prompt generator, and memory\n",
+    "# For all supported clients such as Anthropic & Gemini, have a look at the `instructor` library documentation.\n",
     "agent = BaseChatAgent(\n",
     "    client=client, \n",
-    "    system_prompt_generator=system_prompt_generator,  # Set now\n",
+    "    system_prompt_generator=system_prompt_generator,\n",
     "    model='gpt-3.5-turbo',\n",
-    "    memory=memory,  # Set now\n",
-    ")"
+    "    memory=memory,\n",
+    "    output_schema=ResponseSchema\n",
+    ")\n",
+    "\n",
+    "# Print the response schema\n",
+    "Console().print(ResponseSchema.model_json_schema())\n",
+    "Console().print('='*50)"
    ]
   },
   {
@@ -172,7 +216,7 @@
    "source": [
     "## Step 6: Main Chat Loop\n",
     "\n",
-    "We will create a main chat loop for testing the chat agent. This loop will allow you to interact with the chatbot in real-time.\n",
+    "We will create a main chat loop for testing the orchestrator agent. This loop will allow you to interact with the chatbot in real-time.\n",
     "To exit the loop, type `/exit` or `/quit`."
    ]
   },
@@ -182,7 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Agent: {initial_memory[0][\"content\"]}')\n",
+    "console = Console()\n",
+    "console.print(f'Agent: {initial_memory[0][\"content\"]}')\n",
     "\n",
     "while True:\n",
     "    user_input = input('You: ')\n",
@@ -191,7 +236,7 @@
     "        break\n",
     "\n",
     "    response = agent.run(user_input)\n",
-    "    print(f'Agent: {response.response}')"
+    "    console.print(f'Agent: {response}')"
    ]
   }
  ],
