Refactor everything to use a config class

--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -66,7 +66,7 @@
     "import instructor\n",
     "import openai\n",
     "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent\n",
+    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentConfig\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo"
    ]
   },
@@ -159,10 +159,12 @@
     "client = instructor.from_openai(openai.OpenAI(api_key=API_KEY))\n",
     "\n",
     "agent = BaseChatAgent(\n",
-    "    client=client, \n",
-    "    system_prompt_generator=system_prompt_generator,  # Set now\n",
-    "    model='gpt-3.5-turbo',\n",
-    "    memory=memory,  # Set now\n",
+    "    config=BaseChatAgentConfig(\n",
+    "        client=client,\n",
+    "        system_prompt_generator=system_prompt_generator,\n",
+    "        model='gpt-3.5-turbo',\n",
+    "        memory=memory,\n",
+    "    )\n",
     ")"
    ]
   },
