--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentResponse\n",
+    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentResponse, BaseChatAgentConfig\n",
     "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolSchema"
    ]
   },
@@ -221,11 +221,13 @@
    "source": [
     "# Create a chat agent with the specified model, system prompt generator, and memory\n",
     "agent = BaseChatAgent(\n",
-    "    client=client, \n",
-    "    system_prompt_generator=system_prompt_generator,\n",
-    "    model='gpt-3.5-turbo',\n",
-    "    memory=memory,\n",
-    "    output_schema=ResponseSchema\n",
+    "    config=BaseChatAgentConfig(\n",
+    "        client=client, \n",
+    "        system_prompt_generator=system_prompt_generator,\n",
+    "        model='gpt-3.5-turbo',\n",
+    "        memory=memory,\n",
+    "        output_schema=ResponseSchema\n",
+    "    )\n",
     ")\n",
     "\n",
     "console.print(\"BaseChatAgent with YelpSearchTool is ready.\")\n",
@@ -238,7 +240,8 @@
    "source": [
     "## Step 9: Run the Agent\n",
     "\n",
-    "Start the agent to interact with the user. The agent will ask for user input, process it, and provide responses based on the gathered information."
+    "Start the agent to interact with the user. The agent will ask for user input, process it, and provide responses based on the gathered information.\n",
+    "Try telling it you would like some pizza, it should ask for your location and other information until it feels it can properly call the Yelp API with the information it has gathered."
    ]
   },
   {
@@ -277,8 +280,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
