--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -192,7 +192,11 @@
     "        print('Exiting chat...')\n",
     "        break\n",
     "\n",
-    "    response = agent.run(user_input)\n",
+    "    # Note: The .model_dump() method is ONLY necessary in an ipython notebook.\n",
+    "    # In a normal Python script, you can simply pass the input_schema() run() method like so:\n",
+    "    # response = agent.run(agent.input_schema(chat_input=user_input))\n",
+    "    # The reason for this is unknown to me and I have not been able to find any documentation on it.\n",
+    "    response = agent.run(agent.input_schema(chat_input=user_input).model_dump())\n",
     "    print(f'Agent: {response.response}')"
    ]
   }
