--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -101,6 +101,7 @@
     "        'Once all required information is gathered, use the YelpSearchTool schema to search Yelp for restaurants.',\n",
     "    ],\n",
     "    output_instructions=[\n",
+    "        'Always use the chosen schema as output',\n",
     "        'Provide helpful and relevant information to assist the user.',\n",
     "        'Be friendly and respectful in all interactions.',\n",
     "        'Ensure that the chat responses are used to ask clarifying questions and gather information, and the Yelp schema is used to perform the actual search.'\n",
@@ -256,12 +257,12 @@
     "        print('Exiting chat...')\n",
     "        break\n",
     "\n",
-    "    response = agent.run(user_input)\n",
+    "    response = agent.run(agent.input_schema(chat_input=user_input).model_dump())\n",
     "    \n",
     "    # Check the type of the response schema\n",
     "    if isinstance(response.chosen_schema, YelpSearchToolSchema):\n",
     "        output = yelp_tool.run(response.chosen_schema)\n",
-    "        agent.memory.add_message('assistant', f'INTERNAL THOUGHT: I have found the following information: {output.results}\\n\\n I will now summarize the results for the user.')\n",
+    "        agent.memory.add_message('system', f'The following information was found: {output.results}\\n\\n Please summarize the results for the user.')\n",
     "        output = agent.run().chosen_schema.response\n",
     "    else:\n",
     "        output = response.chosen_schema.response\n",
