feat: Add multi-agent quickstart tutorial notebook

--- a/examples/notebooks/orchestrator.ipynb
+++ b/examples/notebooks/orchestrator.ipynb
@@ -332,7 +332,7 @@
     "        print('Exiting chat...')\n",
     "        break\n",
     "\n",
-    "    response = agent.run(user_input)\n",
+    "    response = agent.run(agent.input_schema(chat_input=user_input))\n",
     "    console.print(f'Agent: {response}')\n"
    ]
   }
