--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentResponse, BaseChatAgentConfig\n",
+    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentResponseSchema, BaseChatAgentConfig\n",
     "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolSchema"
    ]
   },
@@ -194,7 +194,7 @@
    "source": [
     "# Define a custom response schema that can handle both chat responses and Yelp search tool responses\n",
     "class ResponseSchema(BaseModel):\n",
-    "    chosen_schema: Union[BaseChatAgentResponse, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
+    "    chosen_schema: Union[BaseChatAgentResponseSchema, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
     "\n",
     "    class Config:\n",
     "        title = 'ResponseSchema'\n",
