--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -148,6 +148,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Notice how instead of defining the response schema as a class, we use create_model() to define the schema. This is because we want to use the TOOL.input_schema to dynamically get the input schema of the agent, which is not possible with a class definition."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Create Orchestration Agent\n",
         "\n",
         "Create an orchestration agent that can manage the interactions between the user and the individual agents."
