refactor: Update chatbot  to use 'chat_message' instead of 'chat_input'

--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -191,17 +191,17 @@
         "        print('Exiting chat...')\n",
         "        break\n",
         "\n",
-        "    response = orchestration_agent.run(orchestration_agent.input_schema(chat_input=user_input))\n",
-        "    console.print(f'Agent: {response.response}')\n",
+        "    response = orchestration_agent.run(orchestration_agent.input_schema(chat_message=user_input))\n",
+        "    console.print(f'Agent: {response.chat_message}')\n",
         "\n",
-        "    if isinstance(response.response, searx_agent.input_schema):\n",
+        "    if isinstance(response.chat_message, searx_agent.input_schema):\n",
         "        console.print(f'Using searx agent')\n",
-        "        response = searx_agent.run(response.response)\n",
-        "    elif isinstance(response.response, calc_agent.input_schema):\n",
+        "        response = searx_agent.run(response.chat_message)\n",
+        "    elif isinstance(response.chat_message, calc_agent.input_schema):\n",
         "        console.print(f'Using calc agent')\n",
-        "        response = calc_agent.run(response.response)\n",
+        "        response = calc_agent.run(response.chat_message)\n",
         "\n",
-        "    console.print(f'Agent: {response.response}')"
+        "    console.print(f'Agent: {response.chat_message}')"
       ]
     },
     {
