--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -257,15 +257,15 @@
     "        print('Exiting chat...')\n",
     "        break\n",
     "\n",
-    "    response = agent.run(agent.input_schema(chat_input=user_input).model_dump())\n",
+    "    response = agent.run(agent.input_schema(chat_message=user_input).model_dump())\n",
     "    \n",
     "    # Check the type of the response schema\n",
     "    if isinstance(response.chosen_schema, YelpSearchToolSchema):\n",
     "        output = yelp_tool.run(response.chosen_schema)\n",
     "        agent.memory.add_message('system', f'The following information was found: {output.results}\\n\\n Please summarize the results for the user.')\n",
-    "        output = agent.run().chosen_schema.response\n",
+    "        output = agent.run().chosen_schema.chat_message\n",
     "    else:\n",
-    "        output = response.chosen_schema.response\n",
+    "        output = response.chosen_schema.chat_message\n",
     "        \n",
     "    console.print(f'Agent: {output}')"
    ]
